@@ -5,7 +5,7 @@ readline.h
 is part of:
 
 WinEditLine (formerly MinGWEditLine)
-Copyright 2010-2016 Paolo Tosco <paolo.tosco.mail@gmail.com>
+Copyright 2010-2020 Paolo Tosco <paolo.tosco.mail@gmail.com>
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -45,6 +45,10 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 these defines may be changed
 */
 #define DEFAULT_HISTORY_SIZE    200  /* default number of history entries */
+
+#ifdef __cplusplus
+extern "C" {
+#endif
 
 typedef char **rl_completion_func_t(const char *, int, int);
 typedef char *rl_compentry_func_t(const char *, int);
